# llm-index

./: pyproject.toml  readme.md
.github/workflows/: lint-type-format-test.yml  lint-type-test.yml
llm_index/load/: base.py
llm_index/load/gcp/: bigquery.py  storage.py
requirements/: ci.txt  package.txt
src/llm-index/load/aws/: __init__.py
src/llm-index/load/azure/: __init__.py
src/llm-index/load/gcp/: __init__.py
tests/evaluate/: __init__.py
