[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm-index"]

[tool.hatch.build.targets.wheel.sources]
"src/llm-index" = "llm_index"

[project]
name = "llm-index"
version = "0.0.1"
authors = [
  { name="EL AMRI Ayour Badr", email="badrayour.elamri@protonmail.com" },
]
description = "Functional llm index"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/elamribadrayour/llm-index"
Issues = "https://github.com/elamribadrayour/llm-index/issues"
